--- a/Proyecto-2.vcxproj
+++ b/Proyecto-2.vcxproj
@@ -141,6 +141,9 @@
   <ItemGroup>
     <ClInclude Include="Crypt.hpp" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="input.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
